# OpenVINO-Examples

./: .gitignore  CMakeLists.txt  README.md  install_dependency.sh
cpp/classification/: CMakeLists.txt  README.md  classification.cpp  classification.h
